--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -110,7 +110,7 @@ section {
 }
 body {
   line-height: 1;
-  font-family: -apple-system, "Montserrat", "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", -apple-system, "Helvetica Neue", sans-serif;
   font-size: 16px;
   /*font-family: "Open Sans", sans-serif;*/
   -webkit-font-smoothing: antialiased;
