--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -56,7 +56,6 @@ ul,
 li,
 fieldset,
 form,
-label,
 legend,
 table,
 caption,
@@ -139,4 +138,170 @@ a {
   color: #3913b8;
   font-weight: 600;
   text-decoration: none;
+}
+
+input {
+  width: 100%;
+  max-width: 100%;
+  height: 50px;
+  padding: 16px 16px;
+  font-family: "Montserrat", -apple-system, "Helvetica Neue", sans-serif;
+  border-radius: 8px;
+  background: #0f2028;
+  border: 3px solid #789bb6;
+  box-sizing: border-box;
+  font-size: 15px;
+  line-height: 140%;
+  font-weight: 500;
+}
+input:focus {
+  outline: none;
+  border: 3px solid white;
+  opacity: 1;
+  color: white;
+  transition: 0.3s ease-in-out;
+}
+
+input::placeholder {
+  color: #e1e9ef;
+  opacity: 0.3;
+}
+
+input:valid {
+  border: 3px solid #54c5c0;
+  color: white;
+  transition: 0.3s ease-in-out;
+}
+
+/* input:invalid {
+  border: 3px solid #e8b247;
+  color: white;
+  transition: 0.3s ease-in-out;
+} */
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill::first-line,
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus,
+select:-webkit-autofill:first-line,
+select:-webkit-autofill:active {
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0px 1000px #0f2028 inset;
+  transition: background-color 5000s ease-in-out 0s;
+  font-family: "Montserrat", -apple-system, "Helvetica Neue", sans-serif !important;
+  font-size: 15px;
+  line-height: 140%;
+  font-weight: 500;
+}
+
+select {
+  display: block;
+  font-size: 15px;
+  font-family: "Montserrat", -apple-system, "Helvetica Neue", sans-serif;
+  line-height: 140%;
+  font-weight: 500;
+  color: white;
+  line-height: 1.3;
+  padding: 16px 16px;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  border: 3px solid #789bb6;
+  border-radius: 0.5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background: #0f2028;
+  background-image: url("/images/icons/dropdown.svg");
+  background-repeat: no-repeat, repeat;
+  background-position: right 0.7em top 50%, 0 0;
+  background-size: 20px 20px;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+select:focus {
+  border-color: #aaa;
+  border: 3px solid #54c5c0;
+  color: white;
+  outline: none;
+}
+select:active {
+  border-color: #aaa;
+  border: 3px solid #54c5c0;
+  color: white;
+  outline: none;
+}
+select:valid {
+  border-color: #aaa;
+  border: 3px solid white;
+  color: white;
+  outline: none;
+}
+select option {
+  font-weight: normal;
+}
+
+/* Support for rtl text, explicit support for Arabic and Hebrew */
+*[dir="rtl"] select,
+:root:lang(ar) select,
+:root:lang(iw) select {
+  background-position: left 0.7em top 50%, 0 0;
+  padding: 0.6em 0.8em 0.5em 1.4em;
+}
+
+/* Disabled styles */
+select:disabled,
+select[aria-disabled="true"] {
+  color: graytext;
+  background-image: url("/images/icons/dropdown.svg");
+}
+select:disabled:hover,
+select[aria-disabled="true"] {
+  border-color: #aaa;
+}
+
+label {
+  display: block;
+  color: white;
+  font-size: 12px;
+  padding-bottom: 10px;
+  padding-top: 24px;
+  font-weight: 600;
+}
+
+button {
+  background: #54c5c0;
+  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
+    0px 20px 40px rgba(23, 0, 102, 0.2),
+    inset 0px 0px 0px 0.5px rgba(255, 255, 255, 0.5); */
+  border-radius: 8px;
+  border: none;
+  width: 100%;
+  height: 52px;
+  display: grid;
+  grid-template-columns: auto 18px;
+  padding: 16px 24px;
+  text-align: left;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
+  color: white;
+  font-family: "Montserrat", -apple-system, "Helvetica Neue", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-top: 32px;
+  cursor: pointer;
 }
