--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -135,7 +135,7 @@ table {
   border-spacing: 0;
 }
 a {
-  color: #3913b8;
+  color: white;
   font-weight: 600;
   text-decoration: none;
 }
@@ -290,7 +290,6 @@ button {
   width: 100%;
   height: 52px;
   display: grid;
-  grid-template-columns: auto 18px;
   padding: 16px 24px;
   text-align: left;
   align-items: center;
